Fix too large line-height for <code>

--- a/static/style.css
+++ b/static/style.css
@@ -77,6 +77,10 @@ code, pre {
   font-size: 1.08em;
 }
 
+code {
+  line-height: 1;
+}
+
 .button {
   text-align: center;
 }
